feat: create table scripts feat: import aankomsten in raw

--- a/pipeline.ipynb
+++ b/pipeline.ipynb
@@ -4,7 +4,130 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pipeline"
+    "# Pipeline\n",
+    "\n",
+    "1. Maak SQL scripts voor schema's: RAW, ARCHIVED, CLEANSED\n",
+    "2. Importeer source data in RAW\n",
+    "3. Data cleaning => RAW naar ARCHIVED en CLEANSED\n",
+    "4. Maak SQL scripts voor Data Warehouse / Ster schema\n",
+    "5. Import van CLEANSED naar DWH\n",
+    "6. Prep Data lake: export tabellen naar Parquet files\n",
+    "7. Upload Parquet files naar S3 (eerst bucket aanmaken)\n",
+    "8. Maak Athena tables\n",
+    "9. Gebruik Athena in BI tool naar keuze"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install -q pandas sqlalchemy psycopg2-binary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Stap 1: SQL scripts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import psycopg2\n",
+    "\n",
+    "# Verbindingsgegevens\n",
+    "host = \"host.docker.internal\"\n",
+    "dbname = \"postgres\"\n",
+    "user = \"postgres\"\n",
+    "password = \"Newpassword\"\n",
+    "port = \"5432\"  # Standaard PostgreSQL poort\n",
+    "\n",
+    "# Maak de verbinding\n",
+    "conn = psycopg2.connect(\n",
+    "    host=host,\n",
+    "    dbname=dbname,\n",
+    "    user=user,\n",
+    "    password=password,\n",
+    "    port=port\n",
+    ")\n",
+    "\n",
+    "# Maak een cursor aan\n",
+    "cur = conn.cursor()\n",
+    "# Open het SQL-bestand\n",
+    "with open('./sql_scripts/raw.sql', 'r') as file:\n",
+    "    sql_script = file.read()\n",
+    "cur.execute(sql_script)\n",
+    "\n",
+    "with open('./sql_scripts/archived.sql', 'r') as file:\n",
+    "    sql_script = file.read()\n",
+    "cur.execute(sql_script)\n",
+    "\n",
+    "with open('./sql_scripts/cleansed.sql', 'r') as file:\n",
+    "    sql_script = file.read()\n",
+    "cur.execute(sql_script)\n",
+    "\n",
+    "conn.commit()  # Vergeet niet te committeren als het script wijzigingen maakt\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Stap 2: raw importeren"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "61"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sqlalchemy import create_engine, types as sqlalchemytypes\n",
+    "\n",
+    "# Vervang 'username', 'password', 'host', 'port', en 'database' met jouw databasegegevens\n",
+    "engine = create_engine('postgresql://postgres:Newpassword@host.docker.internal:5432/postgres')\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Pas het pad naar je CSV-bestand aan\n",
+    "df = pd.read_csv('./source_data/export_aankomst.txt', sep='\\t', dtype=str)\n",
+    "\n",
+    "df.to_sql('aankomst', con=engine, schema='raw', if_exists='append', index=False, dtype={\n",
+    "     \"Vluchtid\": sqlalchemytypes.String,\n",
+    "    \"Vliegtuigcode\": sqlalchemytypes.String,\n",
+    "    \"Terminal\": sqlalchemytypes.String,\n",
+    "    \"Gate\": sqlalchemytypes.String,\n",
+    "    \"Baan\": sqlalchemytypes.String,\n",
+    "    \"Bezetting\": sqlalchemytypes.String,\n",
+    "    \"Vracht\": sqlalchemytypes.String,\n",
+    "    \"Aankomsttijd\": sqlalchemytypes.String,\n",
+    "})\n"
    ]
   }
  ],
