--- a/pipeline.ipynb
+++ b/pipeline.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -43,27 +43,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "OperationalError",
-     "evalue": "connection to server at \"host.docker.internal\" (172.16.202.253), port 5432 failed: Connection timed out (0x0000274C/10060)\n\tIs the server running on that host and accepting TCP/IP connections?\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_19584\\1625806465.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;31m# Maak de verbinding\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m conn = psycopg2.connect(\n\u001b[0m\u001b[0;32m     12\u001b[0m     \u001b[0mhost\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mhost\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m     \u001b[0mdbname\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdbname\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Roaming\\Python\\Python39\\site-packages\\psycopg2\\__init__.py\u001b[0m in \u001b[0;36mconnect\u001b[1;34m(dsn, connection_factory, cursor_factory, **kwargs)\u001b[0m\n\u001b[0;32m    120\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    121\u001b[0m     \u001b[0mdsn\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_ext\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmake_dsn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdsn\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 122\u001b[1;33m     \u001b[0mconn\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_connect\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdsn\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mconnection_factory\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mconnection_factory\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwasync\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    123\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mcursor_factory\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    124\u001b[0m         \u001b[0mconn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcursor_factory\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcursor_factory\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mOperationalError\u001b[0m: connection to server at \"host.docker.internal\" (172.16.202.253), port 5432 failed: Connection timed out (0x0000274C/10060)\n\tIs the server running on that host and accepting TCP/IP connections?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import psycopg2\n",
     "\n",
     "# Verbindingsgegevens\n",
-    "host = \"host.docker.internal\"\n",
+    "host = \"localhost\"\n",
     "dbname = \"postgres\"\n",
     "user = \"postgres\"\n",
     "password = \"Newpassword\"\n",
@@ -106,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +102,7 @@
        "61"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +111,7 @@
     "from sqlalchemy import create_engine, types as sqlalchemytypes\n",
     "\n",
     "# Vervang 'username', 'password', 'host', 'port', en 'database' met jouw databasegegevens\n",
-    "engine = create_engine('postgresql://postgres:Newpassword@host.docker.internal:5432/postgres')\n",
+    "engine = create_engine('postgresql://postgres:Newpassword@localhost:5432/postgres')\n",
     "\n",
     "import pandas as pd\n",
     "\n",
@@ -141,6 +128,44 @@
     "    \"Vracht\": sqlalchemytypes.String,\n",
     "    \"Aankomsttijd\": sqlalchemytypes.String,\n",
     "})\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Cleaning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Laad de data\n",
+    "df = pd.read_csv('./source_data/export_aankomst.txt', sep='\\t', dtype=str)\n",
+    "\n",
+    "# Verwijder duplicaten\n",
+    "df.drop_duplicates(inplace=True)\n",
+    "\n",
+    "# Verwijder rijen met ontbrekende waarden\n",
+    "df.dropna(inplace=True)\n",
+    "\n",
+    "# Converteer numerieke kolommen naar het juiste datatypen\n",
+    "numeric_columns = [\"Vluchtid\", \"Bezetting\", \"Vracht\"]\n",
+    "df[numeric_columns] = df[numeric_columns].apply(pd.to_numeric, errors='coerce')\n",
+    "\n",
+    "# Converteer datums naar datetime objecten\n",
+    "df['Aankomsttijd'] = pd.to_datetime(df['Aankomsttijd'])\n",
+    "\n",
+    "# Controleer het resultaat\n",
+    "print(df.info())\n",
+    "\n",
+    "# Opslaan van de schoongemaakte data\n",
+    "df.to_csv('./cleaned_data/aankomst_cleaned.csv', index=False)\n"
    ]
   }
  ],
