imported to raw

--- a/pipeline.ipynb
+++ b/pipeline.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -43,18 +43,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
     "import psycopg2\n",
     "\n",
     "# Verbindingsgegevens\n",
-    "host = \"localhost\"\n",
+    "host = \"192.168.56.1\"\n",
     "dbname = \"postgres\"\n",
     "user = \"postgres\"\n",
     "password = \"Newpassword\"\n",
-    "port = \"5432\"  # Standaard PostgreSQL poort\n",
+    "port = \"5433\"  # Standaard PostgreSQL poort\n",
     "\n",
     "# Maak de verbinding\n",
     "conn = psycopg2.connect(\n",
@@ -93,41 +93,184 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "61"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data import complete.\n"
+     ]
     }
    ],
    "source": [
     "from sqlalchemy import create_engine, types as sqlalchemytypes\n",
-    "\n",
-    "# Vervang 'username', 'password', 'host', 'port', en 'database' met jouw databasegegevens\n",
-    "engine = create_engine('postgresql://postgres:Newpassword@localhost:5432/postgres')\n",
-    "\n",
     "import pandas as pd\n",
     "\n",
-    "# Pas het pad naar je CSV-bestand aan\n",
-    "df = pd.read_csv('./source_data/export_aankomst.txt', sep='\\t', dtype=str)\n",
+    "# Database connection details\n",
+    "engine = create_engine('postgresql://postgres:Newpassword@192.168.56.1:5433/postgres')\n",
     "\n",
-    "df.to_sql('aankomst', con=engine, schema='raw', if_exists='append', index=False, dtype={\n",
-    "     \"Vluchtid\": sqlalchemytypes.String,\n",
-    "    \"Vliegtuigcode\": sqlalchemytypes.String,\n",
-    "    \"Terminal\": sqlalchemytypes.String,\n",
-    "    \"Gate\": sqlalchemytypes.String,\n",
-    "    \"Baan\": sqlalchemytypes.String,\n",
-    "    \"Bezetting\": sqlalchemytypes.String,\n",
-    "    \"Vracht\": sqlalchemytypes.String,\n",
-    "    \"Aankomsttijd\": sqlalchemytypes.String,\n",
-    "})\n"
+    "# List of table names and corresponding file paths\n",
+    "tables = {\n",
+    "    'aankomst': './source_data/export_aankomst.txt',\n",
+    "    'banen': './source_data/export_banen.csv',\n",
+    "    'klant': './source_data/export_klant.csv',\n",
+    "    'luchthavens': './source_data/export_luchthavens.txt',\n",
+    "    'maatschappijen': './source_data/export_maatschappijen.txt',\n",
+    "    'planning': './source_data/export_planning.txt',\n",
+    "    'vertrek': './source_data/export_vertrek.txt',\n",
+    "    'vliegtuig': './source_data/export_vliegtuig.txt',\n",
+    "    'vliegtuigtype': './source_data/export_vliegtuigtype.csv',\n",
+    "    'vlucht': './source_data/export_vlucht.txt',\n",
+    "    'weer': './source_data/export_weer.txt'\n",
+    "}\n",
+    "\n",
+    "# Column types for each table\n",
+    "column_types = {\n",
+    "    'aankomst': {\n",
+    "        \"Vluchtid\": sqlalchemytypes.String,\n",
+    "        \"Vliegtuigcode\": sqlalchemytypes.String,\n",
+    "        \"Terminal\": sqlalchemytypes.String,\n",
+    "        \"Gate\": sqlalchemytypes.String,\n",
+    "        \"Baan\": sqlalchemytypes.String,\n",
+    "        \"Bezetting\": sqlalchemytypes.String,\n",
+    "        \"Vracht\": sqlalchemytypes.String,\n",
+    "        \"Aankomsttijd\": sqlalchemytypes.String,\n",
+    "    },\n",
+    "    'banen': {\n",
+    "        \"Baannummer\": sqlalchemytypes.String,\n",
+    "        \"Code\": sqlalchemytypes.String,\n",
+    "        \"Naam\": sqlalchemytypes.String,\n",
+    "        \"Lengte\": sqlalchemytypes.String,\n",
+    "    },\n",
+    "    'klant': {\n",
+    "        \"Vluchtid\": sqlalchemytypes.String,\n",
+    "        \"Operatie\": sqlalchemytypes.String,\n",
+    "        \"Faciliteiten\": sqlalchemytypes.String,\n",
+    "        \"Shops\": sqlalchemytypes.String,\n",
+    "    },\n",
+    "    'luchthavens': {\n",
+    "        \"Airport\": sqlalchemytypes.String,\n",
+    "        \"City\": sqlalchemytypes.String,\n",
+    "        \"Country\": sqlalchemytypes.String,\n",
+    "        \"IATA\": sqlalchemytypes.String,\n",
+    "        \"ICAO\": sqlalchemytypes.String,\n",
+    "        \"Lat\": sqlalchemytypes.String,\n",
+    "        \"Lon\": sqlalchemytypes.String,\n",
+    "        \"Alt\": sqlalchemytypes.String,\n",
+    "        \"TZ\": sqlalchemytypes.String,\n",
+    "        \"DST\": sqlalchemytypes.String,\n",
+    "        \"Tz\": sqlalchemytypes.String,\n",
+    "    },\n",
+    "    'maatschappijen': {\n",
+    "        \"Name\": sqlalchemytypes.String,\n",
+    "        \"IATA\": sqlalchemytypes.String,\n",
+    "        \"ICAO\": sqlalchemytypes.String,\n",
+    "    },\n",
+    "    'planning': {\n",
+    "        \"Vluchtnr\": sqlalchemytypes.String,\n",
+    "        \"Airlinecode\": sqlalchemytypes.String,\n",
+    "        \"Destcode\": sqlalchemytypes.String,\n",
+    "        \"Planterminal\": sqlalchemytypes.String,\n",
+    "        \"Plangate\": sqlalchemytypes.String,\n",
+    "        \"Plantijd\": sqlalchemytypes.String,\n",
+    "    },\n",
+    "    'vertrek': {\n",
+    "        \"Vluchtid\": sqlalchemytypes.String,\n",
+    "        \"Vliegtuigcode\": sqlalchemytypes.String,\n",
+    "        \"Terminal\": sqlalchemytypes.String,\n",
+    "        \"Gate\": sqlalchemytypes.String,\n",
+    "        \"Baan\": sqlalchemytypes.String,\n",
+    "        \"Bezetting\": sqlalchemytypes.String,\n",
+    "        \"Vracht\": sqlalchemytypes.String,\n",
+    "        \"Vertrektijd\": sqlalchemytypes.String,\n",
+    "    },\n",
+    "    'vliegtuig': {\n",
+    "        \"Airlinecode\": sqlalchemytypes.String,\n",
+    "        \"Vliegtuigcode\": sqlalchemytypes.String,\n",
+    "        \"Vliegtuigtype\": sqlalchemytypes.String,\n",
+    "        \"Bouwjaar\": sqlalchemytypes.String,\n",
+    "    },\n",
+    "    'vliegtuigtype': {\n",
+    "        \"IATA\": sqlalchemytypes.String,\n",
+    "        \"ICAO\": sqlalchemytypes.String,\n",
+    "        \"Merk\": sqlalchemytypes.String,\n",
+    "        \"Type\": sqlalchemytypes.String,\n",
+    "        \"Wake\": sqlalchemytypes.String,\n",
+    "        \"Cat\": sqlalchemytypes.String,\n",
+    "        \"Capaciteit\": sqlalchemytypes.String,\n",
+    "        \"Vracht\": sqlalchemytypes.String,\n",
+    "    },\n",
+    "    'vlucht': {\n",
+    "        \"Vluchtid\": sqlalchemytypes.String,\n",
+    "        \"Vluchtnr\": sqlalchemytypes.String,\n",
+    "        \"Airlinecode\": sqlalchemytypes.String,\n",
+    "        \"Destcode\": sqlalchemytypes.String,\n",
+    "        \"Vliegtuigcode\": sqlalchemytypes.String,\n",
+    "        \"Datum\": sqlalchemytypes.String,\n",
+    "    },\n",
+    "    'weer': {\n",
+    "        \"Datum\": sqlalchemytypes.String,\n",
+    "        \"DDVEC\": sqlalchemytypes.String,\n",
+    "        \"FHVEC\": sqlalchemytypes.String,\n",
+    "        \"FG\": sqlalchemytypes.String,\n",
+    "        \"FHX\": sqlalchemytypes.String,\n",
+    "        \"FHXH\": sqlalchemytypes.String,\n",
+    "        \"FHN\": sqlalchemytypes.String,\n",
+    "        \"FHNH\": sqlalchemytypes.String,\n",
+    "        \"FXX\": sqlalchemytypes.String,\n",
+    "        \"FXXH\": sqlalchemytypes.String,\n",
+    "        \"TG\": sqlalchemytypes.String,\n",
+    "        \"TN\": sqlalchemytypes.String,\n",
+    "        \"TNH\": sqlalchemytypes.String,\n",
+    "        \"TX\": sqlalchemytypes.String,\n",
+    "        \"TXH\": sqlalchemytypes.String,\n",
+    "        \"T10N\": sqlalchemytypes.String,\n",
+    "        \"T10NH\": sqlalchemytypes.String,\n",
+    "        \"SQ\": sqlalchemytypes.String,\n",
+    "        \"SP\": sqlalchemytypes.String,\n",
+    "        \"Q\": sqlalchemytypes.String,\n",
+    "        \"DR\": sqlalchemytypes.String,\n",
+    "        \"RH\": sqlalchemytypes.String,\n",
+    "        \"RHX\": sqlalchemytypes.String,\n",
+    "        \"RHXH\": sqlalchemytypes.String,\n",
+    "        \"PG\": sqlalchemytypes.String,\n",
+    "        \"PX\": sqlalchemytypes.String,\n",
+    "        \"PXH\": sqlalchemytypes.String,\n",
+    "        \"PN\": sqlalchemytypes.String,\n",
+    "        \"PNH\": sqlalchemytypes.String,\n",
+    "        \"VVN\": sqlalchemytypes.String,\n",
+    "        \"VVNH\": sqlalchemytypes.String,\n",
+    "        \"VVX\": sqlalchemytypes.String,\n",
+    "        \"VVXH\": sqlalchemytypes.String,\n",
+    "        \"NG\": sqlalchemytypes.String,\n",
+    "        \"UG\": sqlalchemytypes.String,\n",
+    "        \"UX\": sqlalchemytypes.String,\n",
+    "        \"UXH\": sqlalchemytypes.String,\n",
+    "        \"UN\": sqlalchemytypes.String,\n",
+    "        \"UNH\": sqlalchemytypes.String,\n",
+    "        \"EV2\": sqlalchemytypes.String,\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "# Load each table's CSV file and write to the database\n",
+    "for table, file_path in tables.items():\n",
+    "    if table in ['banen', 'klant', 'vliegtuigtype']:\n",
+    "        try:\n",
+    "            df = pd.read_csv(file_path, sep=';', dtype=str, encoding='utf-8')\n",
+    "        except UnicodeDecodeError:\n",
+    "            df = pd.read_csv(file_path, sep=';', dtype=str, encoding='latin1')\n",
+    "    else:\n",
+    "        try:\n",
+    "            df = pd.read_csv(file_path, sep='\\t', dtype=str, encoding='utf-8')\n",
+    "        except UnicodeDecodeError:\n",
+    "            df = pd.read_csv(file_path, sep='\\t', dtype=str, encoding='latin1')\n",
+    "\n",
+    "\n",
+    "    df.to_sql(table, con=engine, schema='raw', if_exists='append', index=False, dtype=column_types[table])\n",
+    "\n",
+    "print(\"Data import complete.\")\n"
    ]
   },
   {
@@ -139,33 +282,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variable created: aankomst_df\n",
+      "Variable created: banen_df\n",
+      "Variable created: klant_df\n",
+      "Variable created: luchthavens_df\n",
+      "Variable created: maatschappijen_df\n",
+      "Variable created: planning_df\n",
+      "Variable created: vertrek_df\n",
+      "Variable created: vliegtuig_df\n",
+      "Variable created: vliegtuigtype_df\n",
+      "Variable created: vlucht_df\n",
+      "Variable created: weer_df\n"
+     ]
+    }
+   ],
    "source": [
+    "from sqlalchemy import create_engine, inspect\n",
     "import pandas as pd\n",
     "\n",
-    "# Laad de data\n",
-    "df = pd.read_csv('./source_data/export_aankomst.txt', sep='\\t', dtype=str)\n",
+    "# Database connection details\n",
+    "engine = create_engine('postgresql://postgres:Newpassword@192.168.56.1:5433/postgres')\n",
     "\n",
-    "# Verwijder duplicaten\n",
-    "df.drop_duplicates(inplace=True)\n",
+    "# Create an inspector to get the list of tables in the schema\n",
+    "inspector = inspect(engine)\n",
     "\n",
-    "# Verwijder rijen met ontbrekende waarden\n",
-    "df.dropna(inplace=True)\n",
+    "# Get the list of tables in the 'raw' schema\n",
+    "tables = inspector.get_table_names(schema='raw')\n",
     "\n",
-    "# Converteer numerieke kolommen naar het juiste datatypen\n",
-    "numeric_columns = [\"Vluchtid\", \"Bezetting\", \"Vracht\"]\n",
-    "df[numeric_columns] = df[numeric_columns].apply(pd.to_numeric, errors='coerce')\n",
+    "# Load each table into a DataFrame and assign it to a variable\n",
+    "for table in tables:\n",
+    "    df = pd.read_sql_table(table, con=engine, schema='raw')\n",
+    "    globals()[f'{table}_df'] = df\n",
     "\n",
-    "# Converteer datums naar datetime objecten\n",
-    "df['Aankomsttijd'] = pd.to_datetime(df['Aankomsttijd'])\n",
-    "\n",
-    "# Controleer het resultaat\n",
-    "print(df.info())\n",
-    "\n",
-    "# Opslaan van de schoongemaakte data\n",
-    "df.to_csv('./cleaned_data/aankomst_cleaned.csv', index=False)\n"
+    "tables_raw = []\n",
+    "# Verify that variables are created\n",
+    "for table in tables:\n",
+    "    tables_raw.append(table)\n",
+    "    var_name = f'{table}_df'\n",
+    "    print(f\"Variable created: {var_name}\")"
    ]
   }
  ],
