--- a/pipeline.ipynb
+++ b/pipeline.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "# Pipeline\n",
     "\n",
-    "1. Maak SQL scripts voor schema's: RAW, ARCHIVED, CLEANSED\n",
-    "2. Importeer source data in RAW\n",
-    "3. Data cleaning => RAW naar ARCHIVED en CLEANSED\n",
+    "1. Maak SQL scripts voor schema's: RAW, ARCHIVED, CLEANSED -finished\n",
+    "2. Importeer source data in RAW -finished\n",
+    "3. Data cleaning => RAW naar ARCHIVED en CLEANSED -finished\n",
     "4. Maak SQL scripts voor Data Warehouse / Ster schema\n",
     "5. Import van CLEANSED naar DWH\n",
     "6. Prep Data lake: export tabellen naar Parquet files\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
     "}\n",
     "\n",
     "# Column types for each table\n",
-    "column_types = {\n",
+    "column_types_raw = {\n",
     "    'aankomst': {\n",
     "        \"Vluchtid\": sqlalchemytypes.String,\n",
     "        \"Vliegtuigcode\": sqlalchemytypes.String,\n",
@@ -161,7 +161,7 @@
     "        \"Alt\": sqlalchemytypes.String,\n",
     "        \"TZ\": sqlalchemytypes.String,\n",
     "        \"DST\": sqlalchemytypes.String,\n",
-    "        \"Tz\": sqlalchemytypes.String,\n",
+    "        \"TzName\": sqlalchemytypes.String,\n",
     "    },\n",
     "    'maatschappijen': {\n",
     "        \"Name\": sqlalchemytypes.String,\n",
@@ -268,7 +268,7 @@
     "            df = pd.read_csv(file_path, sep='\\t', dtype=str, encoding='latin1')\n",
     "\n",
     "\n",
-    "    df.to_sql(table, con=engine, schema='raw', if_exists='append', index=False, dtype=column_types[table])\n",
+    "    df.to_sql(table, con=engine, schema='raw', if_exists='append', index=False, dtype=column_types_raw[table])\n",
     "\n",
     "print(\"Data import complete.\")\n"
    ]
@@ -282,30 +282,166 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Variable created: aankomst_df\n",
-      "Variable created: banen_df\n",
-      "Variable created: klant_df\n",
-      "Variable created: luchthavens_df\n",
-      "Variable created: maatschappijen_df\n",
-      "Variable created: planning_df\n",
-      "Variable created: vertrek_df\n",
-      "Variable created: vliegtuig_df\n",
-      "Variable created: vliegtuigtype_df\n",
-      "Variable created: vlucht_df\n",
-      "Variable created: weer_df\n"
+      "Data cleaning and import complete.\n"
      ]
     }
    ],
    "source": [
+    "import re\n",
     "from sqlalchemy import create_engine, inspect\n",
     "import pandas as pd\n",
+    "import sqlalchemy.types as sqlalchemytypes\n",
+    "\n",
+    "# Initialize variables\n",
+    "aankomst_df = pd.DataFrame()\n",
+    "banen_df = pd.DataFrame()\n",
+    "klant_df = pd.DataFrame()\n",
+    "luchthavens_df = pd.DataFrame()\n",
+    "maatschappijen_df = pd.DataFrame()\n",
+    "planning_df = pd.DataFrame()\n",
+    "vertrek_df = pd.DataFrame()\n",
+    "vliegtuig_df = pd.DataFrame()\n",
+    "vliegtuigtype_df = pd.DataFrame()\n",
+    "vlucht_df = pd.DataFrame()\n",
+    "weer_df = pd.DataFrame()\n",
+    "\n",
+    "tables_raw = []\n",
+    "tables_clean = []\n",
+    "\n",
+    "# Column types specified\n",
+    "column_types_cleansed = {\n",
+    "    'aankomst': {\n",
+    "        \"vluchtid\": sqlalchemytypes.String,\n",
+    "        \"vliegtuigcode\": sqlalchemytypes.String,\n",
+    "        \"terminal\": sqlalchemytypes.String,\n",
+    "        \"gate\": sqlalchemytypes.String,\n",
+    "        \"baan\": sqlalchemytypes.String,\n",
+    "        \"bezetting\": sqlalchemytypes.SmallInteger,\n",
+    "        \"vracht\": sqlalchemytypes.String,\n",
+    "        \"aankomsttijd\": sqlalchemytypes.TIMESTAMP,\n",
+    "    },\n",
+    "    'banen': {\n",
+    "        \"baannummer\": sqlalchemytypes.String,\n",
+    "        \"code\": sqlalchemytypes.String,\n",
+    "        \"naam\": sqlalchemytypes.String,\n",
+    "        \"lengte\": sqlalchemytypes.SmallInteger,\n",
+    "    },\n",
+    "    'klant': {\n",
+    "        \"vluchtid\": sqlalchemytypes.String,\n",
+    "        \"operatie\": sqlalchemytypes.Numeric,\n",
+    "        \"faciliteiten\": sqlalchemytypes.Numeric,\n",
+    "        \"shops\": sqlalchemytypes.Numeric,\n",
+    "    },\n",
+    "    'luchthavens': {\n",
+    "        \"airport\": sqlalchemytypes.String,\n",
+    "        \"city\": sqlalchemytypes.String,\n",
+    "        \"country\": sqlalchemytypes.String,\n",
+    "        \"iata\": sqlalchemytypes.String,\n",
+    "        \"icao\": sqlalchemytypes.String,\n",
+    "        \"lat\": sqlalchemytypes.Float,\n",
+    "        \"lon\": sqlalchemytypes.Float,\n",
+    "        \"alt\": sqlalchemytypes.SmallInteger,\n",
+    "        \"tz\": sqlalchemytypes.String,\n",
+    "        \"dst\": sqlalchemytypes.String,\n",
+    "        \"tzname\": sqlalchemytypes.String,\n",
+    "    },\n",
+    "    'maatschappijen': {\n",
+    "        \"name\": sqlalchemytypes.String,\n",
+    "        \"iata\": sqlalchemytypes.String,\n",
+    "        \"icao\": sqlalchemytypes.String,\n",
+    "    },\n",
+    "    'planning': {\n",
+    "        \"vluchtnr\": sqlalchemytypes.String,\n",
+    "        \"airlinecode\": sqlalchemytypes.String,\n",
+    "        \"destcode\": sqlalchemytypes.String,\n",
+    "        \"planterminal\": sqlalchemytypes.String,\n",
+    "        \"plangate\": sqlalchemytypes.String,\n",
+    "        \"plantijd\": sqlalchemytypes.TIME,\n",
+    "    },\n",
+    "    'vertrek': {\n",
+    "        \"vluchtid\": sqlalchemytypes.String,\n",
+    "        \"vliegtuigcode\": sqlalchemytypes.String,\n",
+    "        \"terminal\": sqlalchemytypes.String,\n",
+    "        \"gate\": sqlalchemytypes.String,\n",
+    "        \"baan\": sqlalchemytypes.String,\n",
+    "        \"bezetting\": sqlalchemytypes.SmallInteger,\n",
+    "        \"vracht\": sqlalchemytypes.String,\n",
+    "        \"vertrektijd\": sqlalchemytypes.TIME,\n",
+    "    },\n",
+    "    'vliegtuig': {\n",
+    "        \"airlinecode\": sqlalchemytypes.String,\n",
+    "        \"vliegtuigcode\": sqlalchemytypes.String,\n",
+    "        \"vliegtuigtype\": sqlalchemytypes.String,\n",
+    "        \"bouwjaar\": sqlalchemytypes.String,\n",
+    "    },\n",
+    "    'vliegtuigtype': {\n",
+    "        \"iata\": sqlalchemytypes.String,\n",
+    "        \"icao\": sqlalchemytypes.String,\n",
+    "        \"merk\": sqlalchemytypes.String,\n",
+    "        \"type\": sqlalchemytypes.String,\n",
+    "        \"wake\": sqlalchemytypes.String,\n",
+    "        \"cat\": sqlalchemytypes.String,\n",
+    "        \"capaciteit\": sqlalchemytypes.String,\n",
+    "        \"vracht\": sqlalchemytypes.String,\n",
+    "    },\n",
+    "    'vlucht': {\n",
+    "        \"vluchtid\": sqlalchemytypes.String,\n",
+    "        \"vluchtnr\": sqlalchemytypes.String,\n",
+    "        \"airlinecode\": sqlalchemytypes.String,\n",
+    "        \"destcode\": sqlalchemytypes.String,\n",
+    "        \"vliegtuigcode\": sqlalchemytypes.String,\n",
+    "        \"datum\": sqlalchemytypes.String,\n",
+    "    },\n",
+    "    'weer': {\n",
+    "        \"datum\": sqlalchemytypes.String,\n",
+    "        \"ddvec\": sqlalchemytypes.String,\n",
+    "        \"fhvec\": sqlalchemytypes.String,\n",
+    "        \"fg\": sqlalchemytypes.String,\n",
+    "        \"fhx\": sqlalchemytypes.String,\n",
+    "        \"fhxh\": sqlalchemytypes.String,\n",
+    "        \"fhn\": sqlalchemytypes.String,\n",
+    "        \"fhnh\": sqlalchemytypes.String,\n",
+    "        \"fxx\": sqlalchemytypes.String,\n",
+    "        \"fxxh\": sqlalchemytypes.String,\n",
+    "        \"tg\": sqlalchemytypes.String,\n",
+    "        \"tn\": sqlalchemytypes.String,\n",
+    "        \"tnh\": sqlalchemytypes.String,\n",
+    "        \"tx\": sqlalchemytypes.String,\n",
+    "        \"txh\": sqlalchemytypes.String,\n",
+    "        \"t10n\": sqlalchemytypes.String,\n",
+    "        \"t10nh\": sqlalchemytypes.String,\n",
+    "        \"sq\": sqlalchemytypes.String,\n",
+    "        \"sp\": sqlalchemytypes.String,\n",
+    "        \"q\": sqlalchemytypes.String,\n",
+    "        \"dr\": sqlalchemytypes.String,\n",
+    "        \"rh\": sqlalchemytypes.String,\n",
+    "        \"rhx\": sqlalchemytypes.String,\n",
+    "        \"rhxh\": sqlalchemytypes.String,\n",
+    "        \"pg\": sqlalchemytypes.String,\n",
+    "        \"px\": sqlalchemytypes.String,\n",
+    "        \"pxh\": sqlalchemytypes.String,\n",
+    "        \"pn\": sqlalchemytypes.String,\n",
+    "        \"pnh\": sqlalchemytypes.String,\n",
+    "        \"vvn\": sqlalchemytypes.String,\n",
+    "        \"vvnh\": sqlalchemytypes.String,\n",
+    "        \"vvx\": sqlalchemytypes.String,\n",
+    "        \"vvxh\": sqlalchemytypes.String,\n",
+    "        \"ng\": sqlalchemytypes.String,\n",
+    "        \"ug\": sqlalchemytypes.String,\n",
+    "        \"ux\": sqlalchemytypes.String,\n",
+    "        \"uxh\": sqlalchemytypes.String,\n",
+    "        \"un\": sqlalchemytypes.String,\n",
+    "        \"unh\": sqlalchemytypes.String,\n",
+    "        \"ev2\": sqlalchemytypes.String,\n",
+    "    }\n",
+    "}\n",
     "\n",
     "# Database connection details\n",
     "engine = create_engine('postgresql://postgres:Newpassword@192.168.56.1:5433/postgres')\n",
@@ -319,15 +455,83 @@
     "# Load each table into a DataFrame and assign it to a variable\n",
     "for table in tables:\n",
     "    df = pd.read_sql_table(table, con=engine, schema='raw')\n",
+    "    # Make all column names lowercase\n",
+    "    df.columns = df.columns.str.lower()\n",
     "    globals()[f'{table}_df'] = df\n",
+    "    tables_raw.append(df)\n",
     "\n",
-    "tables_raw = []\n",
-    "# Verify that variables are created\n",
-    "for table in tables:\n",
-    "    tables_raw.append(table)\n",
-    "    var_name = f'{table}_df'\n",
-    "    print(f\"Variable created: {var_name}\")"
+    "# Regex pattern for detecting any special character\n",
+    "special_char_pattern = re.compile(r'[^a-zA-Z0-9\\s]')\n",
+    "\n",
+    "#cleaning\n",
+    "for df, table in zip([aankomst_df, banen_df, klant_df, luchthavens_df, maatschappijen_df, planning_df, vertrek_df, vliegtuig_df, vliegtuigtype_df, vlucht_df, weer_df], \n",
+    "                     ['aankomst', 'banen', 'klant', 'luchthavens', 'maatschappijen', 'planning', 'vertrek', 'vliegtuig', 'vliegtuigtype', 'vlucht', 'weer']):\n",
+    "    \n",
+    "    # Drop rows with completely missing values and remove duplicates\n",
+    "    df.dropna(how='all', inplace=True)\n",
+    "    df.drop_duplicates(inplace=True)\n",
+    "\n",
+    "    # Convert TIMESTAMP columns to the correct format\n",
+    "    if 'aankomsttijd' in df.columns:\n",
+    "        df['aankomsttijd'] = pd.to_datetime(df['aankomsttijd'], errors='coerce')\n",
+    "        df = df[df['aankomsttijd'].notnull()]\n",
+    "\n",
+    "    if 'vertrektijd' in df.columns:\n",
+    "        df['vertrektijd'] = pd.to_datetime(df['vertrektijd'], errors='coerce')\n",
+    "        df = df[df['vertrektijd'].notnull()]\n",
+    "\n",
+    "    # Fill missing gates based on terminal values\n",
+    "    if 'terminal' in df.columns and 'gate' in df.columns:\n",
+    "        df.loc[(df['terminal'] == 'F') & (df['gate'].isnull()), 'gate'] = 'F1'\n",
+    "        df.loc[(df['terminal'] == 'G') & (df['gate'].isnull()), 'gate'] = 'G1'\n",
+    "\n",
+    "    # Replace missing 'bezetting' or 'vracht' with 0 if one of them is empty\n",
+    "    if 'bezetting' in df.columns and 'vracht' in df.columns:\n",
+    "        df.loc[df['bezetting'].isnull() & df['vracht'].notnull(), 'bezetting'] = 0\n",
+    "        df.loc[df['vracht'].isnull() & df['bezetting'].notnull(), 'vracht'] = 0\n",
+    "        df = df.dropna(subset=['bezetting', 'vracht'], how='all')\n",
+    "\n",
+    "    # Remove rows with any special characters in 'maatschappijen' table\n",
+    "    if table == 'maatschappijen' or table == 'vliegtuig':\n",
+    "        # Exclude 'name' column from the filtering operation\n",
+    "        columns_to_check = df.columns[df.columns != 'name']\n",
+    "        # Apply the filtering operation only to specified columns\n",
+    "        df = df[~df[columns_to_check].apply(lambda row: row.astype(str).str.contains(special_char_pattern).any(), axis=1)]\n",
+    "\n",
+    "    # Remove rows where 'icao' column is null\n",
+    "    if 'icao' in df.columns:\n",
+    "        df = df[df['icao'].notnull() & (df['icao'] != '/N')]\n",
+    "\n",
+    "    if 'iata' in df.columns:\n",
+    "        df = df[df['iata'].notnull()]\n",
+    "\n",
+    "    if 'cat' in df.columns:\n",
+    "        df = df[df['cat'].notnull()]\n",
+    "\n",
+    "    if table == 'vliegtuigtype':\n",
+    "        df = df.dropna(thresh=df.shape[1]-1)\n",
+    "\n",
+    "    tables_clean.append(df)\n",
+    "    # Write the cleaned DataFrame to SQL\n",
+    "    df.to_sql(table, con=engine, schema='cleansed', if_exists='append', index=False, dtype=column_types_cleansed[table])\n",
+    "\n",
+    "# Move deleted records to the 'archived' schema\n",
+    "for df_raw, df_clean, table in zip(tables_raw, tables_clean, ['aankomst', 'banen', 'klant', 'luchthavens', 'maatschappijen', 'planning', 'vertrek', 'vliegtuig', 'vliegtuigtype', 'vlucht', 'weer']):\n",
+    "    deleted_indices = df_raw.index.difference(df_clean.index)\n",
+    "    deleted_records = df_raw.loc[deleted_indices]\n",
+    "    deleted_records_filtered = deleted_records[[col for col in deleted_records.columns if col in column_types_cleansed[table]]]\n",
+    "    \n",
+    "    deleted_records_filtered.to_sql(table, con=engine, schema='archived', if_exists='append', index=False, dtype=column_types_cleansed[table])\n",
+    "    \n",
+    "print(\"Data cleaning and import complete.\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
