trying to implement prefect, almost done

--- a/pipeline.ipynb
+++ b/pipeline.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
@@ -296,8 +296,8 @@
    "source": [
     "import re\n",
     "from sqlalchemy import create_engine, inspect\n",
+    "from sqlalchemy import create_engine, types as sqlalchemytypes\n",
     "import pandas as pd\n",
-    "import sqlalchemy.types as sqlalchemytypes\n",
     "\n",
     "# Initialize variables\n",
     "aankomst_df = pd.DataFrame()\n",
@@ -524,6 +524,13 @@
     "    deleted_records_filtered.to_sql(table, con=engine, schema='archived', if_exists='append', index=False, dtype=column_types_cleansed[table])\n",
     "    \n",
     "print(\"Data cleaning and import complete.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Warehouse script + sterschema"
    ]
   },
   {
