finished data warehouse and parquet files

--- a/pipeline.ipynb
+++ b/pipeline.ipynb
@@ -10,8 +10,8 @@
     "2. Importeer source data in RAW -finished\n",
     "3. Data cleaning => RAW naar ARCHIVED en CLEANSED -finished\n",
     "4. Maak SQL scripts voor Data Warehouse / Ster schema\n",
-    "5. Import van CLEANSED naar DWH\n",
-    "6. Prep Data lake: export tabellen naar Parquet files\n",
+    "5. Import van CLEANSED naar DWH - finished\n",
+    "6. Prep Data lake: export tabellen naar Parquet files - finished\n",
     "7. Upload Parquet files naar S3 (eerst bucket aanmaken)\n",
     "8. Maak Athena tables\n",
     "9. Gebruik Athena in BI tool naar keuze"
