--- a/pipeline.ipynb
+++ b/pipeline.ipynb
@@ -12,7 +12,7 @@
     "4. Maak SQL scripts voor Data Warehouse / Ster schema\n",
     "5. Import van CLEANSED naar DWH - finished\n",
     "6. Prep Data lake: export tabellen naar Parquet files - finished\n",
-    "7. Upload Parquet files naar S3 (eerst bucket aanmaken)\n",
+    "7. Upload Parquet files naar S3 (eerst bucket aanmaken) - finished\n",
     "8. Maak Athena tables\n",
     "9. Gebruik Athena in BI tool naar keuze"
    ]
